[package]
name = "winwin"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "windows windowing"
repository = "https://github.com/nxcy/winwin"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
